# mimo-server

./: .gitignore  CONFIG_GUIDE.md  Cargo.toml  Config.toml  Dockerfile  README.md  authapi.md  compose.yml  example.env  package-lock.json
.github/workflows/: docker-publish.yml  rust.yml
migrations/: 20240101000000_init.sql  init.sql
src/: auth.rs  config.rs  error.rs  main.rs  memo_models.rs  server.rs
src/repositories/: auth.rs  jwt.rs  memo.rs  mod.rs  summary.rs  tag.rs  user.rs
src/routes/: auth.rs  mod.rs  settings.rs  share.rs
src/routes/api/: ai.rs  api.rs  auth.rs  memo.rs  memos.rs  mod.rs  settings.rs  sum.rs  tags.rs
src/services/: auth_service.rs  email_service.rs  memo_service.rs  mod.rs  rate_limiter.rs  summary_service.rs  tag_service.rs  tag_services.rs  verification_store.rs
