[package]
name = "mimo-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1"
axum = "0.8.6"
axum-extra = { version = "0.12.2", features = ["cookie"] }
chrono = { version = "0.4.42", features = ["serde"] }
futures = "0.3"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
mongodb = "3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.8"
tower = "0.5"
tower-http = { version = "0.6.6", features = ["cors"] }
uuid = { version = "1.11", features = ["v4"] }
