[package]
name = "mimo-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
async-trait = "0.1"
axum = "0.8.6"
axum-extra = { version = "0.12.2", features = ["cookie"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
futures = "0.3"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
mongodb = "3.1"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.8"
tower = "0.5"
tower-http = { version = "0.6.6", features = ["cors"] }
uuid = { version = "1.11", features = ["v4"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1", "tokio1-native-tls", "smtp-transport", "builder"] }
dashmap = "6.1"
governor = "0.6"
