[package]
name = "mimo-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
axum-extra = { version = "0.12.2", features = ["cookie"] }
tower = "0.5.2"
tower-http = { version = "0.6.7", features = ["cors"] }

tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "net", "time", "sync", "fs"] }
async-trait = "0.1.89"
futures = "0.3.31"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.8.23"

sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
mongodb = "3.4.1"

argon2 = "0.5.3"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
rand = "0.9.2"

anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.19.0", features = ["v4"] }
regex = "1.12.2"
time = "0.3.44"

lettre = { version = "0.11.19", default-features = false, features = ["tokio1", "tokio1-native-tls", "smtp-transport", "builder"] }
reqwest = { version = "0.11.27", features = ["json"] }

dashmap = "6.1.0"
governor = "0.6.3"
